<resources>
    <string name="app_name">Events</string>
    <string name="action_settings">Settings</string>
    <string name="email_edt">Email</string>
    <string name="password">Mot de passe</string>
    <string name="cpassword">Confirmer Mot de passe</string>
    <string name="lastname">Nom</string>
    <string name="name">Prénom</string>
    <string name="btlog">Connexion</string>
    <string name="btgotocreate">Créer un compte</string>
    <string name="inscription">Inscription</string>
    <string name="title_activity_inscription">Inscription</string>
    <string name="error_email">veuillez saisir une adresse mail</string>
    <string name="error_password">renseignez votre mot de passe</string>
    <string name="username">Pseudo</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="send">Envoyer</string>
    <string name="cat">Catégorie</string>
    <string name="title_activity_create_event">CreateEventActivity</string>
    <string name="libelle">Titre</string>
    <string name="description">Description</string>
    <string name="participation">Participer</string>
    <string name="Supprimer">Supprimer</string>
    <string name="desinscrire">Se désinscrire</string>
    <string name="title_activity_trie">Result</string>
    <string name="title_activity_filter">Filtrer</string>
    <string name="title_activity_result">Resultat</string>

</resources>
