<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:scrollbars="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.dev.christopher.events.CreateEventActivity"
    tools:showIn="@layout/activity_create_event">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <TextView
        android:text="@string/cat"
        android:textSize="@dimen/activity_horizontal_margin"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Spinner
        android:id="@+id/spinnerCat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <DatePicker
        android:calendarViewShown="false"
        android:id="@+id/datep"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/TIlibelle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/edtlibelle"
            android:hint="@string/libelle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/TIDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:hint="@string/description"
            android:id="@+id/edtdescription"
            android:layout_width="match_parent"
            android:layout_height="150dp" />
    </android.support.design.widget.TextInputLayout>
    <Button
        android:textColor="@color/colorWhite"
        android:text="@string/send"
        android:background="@drawable/background_button"
        android:id="@+id/create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    </LinearLayout>
</ScrollView>
